--- a/hola soy tu trabajo/practica 2/index.html
+++ b/hola soy tu trabajo/practica 2/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>NOTICIA 1</h1>
-  que onda people
+    <h1>hola mundo</h1>
+    <a href="./noticias.html"
   </body>
 </html>
