--- a/holasoytutrabajo/practica2/listas.html
+++ b/holasoytutrabajo/practica2/listas.html
@@ -9,26 +9,28 @@
   </head>
   <body>
     <div id="contenedor">
-
+<div id="introduccion">
 <div class="introduccion">
 <h1>Hola soy Cristian</h1>
-  <img id="Logo" class=img-circle src="./maxresdefault.jpg" alt="logo" height="150px" width="150px">
+  <img id="Logo" class=img-circle src="./cristian.webp" alt="logo" height="150px" width="150px">
 
-<p>Hola soy cristian, este no soy yo pero es la foto que he puesto, este hombre se llama guillermo</p>
+<p>Hola soy cristian, shhh calladito</p>
 
 <a href=http://www.google.es>Google</a>
-
+</a>
+</div>
 </div>
 <div class="redes">
 
 
 Redes sociales
 <ul>
-<li><a href= https://www.instagram.com/?hl=es><img id="instagram" src="./instagram.png" alt="instagram" height="50px" width="50px"></a> </li>
-<li><a href= https://twitter.com/?lang=es><img id="twitter" src="./twitter.png" alt="twitter" height="50px" width="50px"></a></li>
-<li><a href= https://www.youtube.com/?hl=ES><img id="youtube" src="./youtube.png" alt="youtube" height="50px" width="50px"></a></li>
+<li><a href= https://www.instagram.com/?hl=es><img id="instagram" src="./instagram.png" alt="instagram" height="50px" width="50px"></a>Instagram</li>
+<li><a href= https://twitter.com/?lang=es><img id="twitter" src="./twitter.png" alt="twitter" height="50px" width="50px"></a>Twitter</li>
+<li><a href= https://www.youtube.com/?hl=ES><img id="youtube" src="./youtube.png" alt="youtube" height="50px" width="50px"></a>Youtube</li>
 </ul>
 </div>
+<div id="peliculas">
 <div class="peliculas">
 
 <table>
@@ -51,31 +53,51 @@ Redes sociales
 </tr>
 </table>
 </div>
-  <div class="sobre">
-  Sobre esta pagina
-  <p>Esta pagina esta hecha por Edu cristian no ha hecho una mierda el puto bago</p>
 </div>
-<div class="pie">
-       <h2>About this page</h2>
-Esta pagina ha sido lo mejor que he hecho, Me lo he pasado pipa.
+<div id="pie">
+  <div class="pie">
+  Sobre esta pagina
+  <p>Muy buena pagina creada por mi</p>
+</div>
+</div>
+
        <ul class="list-inline">
         <li>
           <a href="#">
-            <i class="fa fa-heart"></i>
+            <i class="corazon"></i>
           </a>
         </li>
         <li>
           <a href="#">
-            <i class="fa fa-share"></i>
+            <i class="compartir"></i>
           </a>
         </li>
         <li>
           <a href="#">
-            <i class="fa fa-star"></i>
+            <i class="estrella"></i>
           </a>
         </li>
        </ul>
      </div>
 </div>
+<div id="sidebar">
+      <ul>
+        <li>
+          <a href="#introduccion">
+            <i class="fa fa-info-circle"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#peliculas">
+            <i class="fa fa-file-video-o"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#pie">
+            <i class="fa fa-life-ring"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
