--- a/holasoytutrabajo/formularios/formulario1/formulario1.html
+++ b/holasoytutrabajo/formularios/formulario1/formulario1.html
@@ -27,13 +27,34 @@
 
     </select>
 
-    <input type="submit" value="Submit">
+    <input class="boton" type="submit" value="Submit">
   </form>
 </div>
 
 <div class="contenedor">
     <img class="foto2" src="./reynegro.png" width="285px" height="285px"/>
     <img class="foto1" src="./reyblanco.png" width="305px" height="305px" />
+</div>
+
+<div class=formulario2 style="position:absolute; right:50px; width:25% ; padding: 12px 20px; margin: 8px 0; display:inline-block; border: 1px solid #white; border-radius: 4px; box-sizing: border-box;">
+    <label for="fname">Tu Cancion</label>
+    <input type="text" id="song" name="song" placeholder="Tu Cancion..">
+
+    <label for="lname">Tus años</label>
+    <input type="text" id="years" name="years" placeholder="Tus años..">
+
+    <label for="country">Numero de personas a las que quieres invitar</label>
+    <select id="country" name="country">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="Mas de 4">Mas de 4</option>
+      <option value="Ninguna">Ninguna</option>
+
+    </select>
+
+  </form>
 </div>
   </body>
 </html>
