--- a/indice.html
+++ b/indice.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Mi proyecto web</title>
     <link rel="stylesheet" type="text/css" href="indice.css" media="screen"/>
-    <h1>Mis proyectos</h1>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <h1 class="animate__animated animate__pulse">Mis proyectos</h1>
+
   </head>
   <body>
     <ul>
