--- a/indice.html
+++ b/indice.html
@@ -17,6 +17,7 @@
     <li><a href="./holasoytutrabajo/2tabla/practica tablas2.html">Segunda tabla</a></li>
     <li><a href="./holasoytutrabajo/carteldewanted/cartel.html">Cartel de wanted</a></li>
     <li><a href="./holasoytutrabajo/1Animaciones/animaciones.html">Animacion1</a></li>
+      <li><a href="./holasoytutrabajo/numeroaleatorio/index.php">El juego del numero</a></li>
     </ul>
 
 <br><br><br><br><br><br><br><br><br><br>
